--- a/frontend/public/styles/login.css
+++ b/frontend/public/styles/login.css
@@ -1,5 +1,6 @@
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -48,4 +49,10 @@ button:hover {
 a {
     text-decoration: none;
     color: white;
+}
+
+.recover-password {
+    background-color: #dc3545;
+    width: 90%;
+    max-width: 400px;
 }
